name: MissingPy
version: 0.10.6
license: MIT
maintainer: Matt Brown <matt@softmechanics.net>
author: John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING, genexceptions.hs, README, INSTALL,
                    glue/excglue.h, glue/glue.h
stability: Alpha
copyright: Copyright (c) 2005-2008 John Goerzen
synopsis: Haskell interface to Python
homepage: http://github.com/softmechanics/missingpy
bug-reports: http://github.com/softmechanics/missingpy/issues
description:  MissingPy is two things:
 .
 A Haskell binding for many C and Python libraries for tasks such as
 data compression, databases, etc.  This can be found in the
 MissingPy module tree.
 .
 Also, it's a low-level Haskell binding to the Python interpreter to
 enable development of hybrid applications that use both
 environments.  This can be found in the Python module tree.  The
 Haskell bindings above use this environment.
 .
 MissingPy permits you to call Python code from Haskell.  It does NOT
 permit you to call Haskell code from Python.
 .
 MissingPy is the companion to my MissingH library, and integrates with
 it.

build-type: Custom
cabal-version: >= 1.10

library
    default-language:
        Haskell2010

    exposed-modules: Python.Types,
        Python.Utils,
        Python.Objects,
        Python.Interpreter,
        Python.Exceptions,
        Python.Exceptions.ExcTypes,
        Python.Objects.File,
        Python.Objects.Dict,
        MissingPy.FileArchive.GZip,
        MissingPy.FileArchive.BZip2,
        MissingPy.AnyDBM

    other-modules:
        Python.ForeignImports

    build-depends:
        base == 4.*,
        MissingH >= 1.0.1,
        anydbm >= 1.0.5

    c-sources: glue/glue.c glue/excglue.c

    default-extensions:
        ForeignFunctionInterface,
        TypeSynonymInstances,
        FlexibleInstances

test-suite  unittests
    type:   detailed-0.9
    test-module: MissingPyTests

    default-language:
            Haskell2010

    build-depends:
        base == 4.*,
        Cabal,
        cabal-test-hunit,
        anydbm >= 1.0.5,
        directory,
        hashtables,
        MissingH >= 1.0.1,
        HUnit,
        MissingPy

    ghc-options:
        -Wall
        -threaded

    hs-source-dirs:
        testsrc

    default-extensions:
        OverlappingInstances
