name: missing-py2
version: 1.0.0
license: MIT
maintainer: Dom De Re
author: John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING, genexceptions.hs, README, INSTALL,
                    glue/excglue.h, glue/glue.h
stability: Alpha
copyright: Copyright (c) 2005-2008 John Goerzen
synopsis: Haskell interface to Python
homepage: http://github.com/domdere/missing-py2
bug-reports: http://github.com/domdere/missing-py2/issues
description:

 A fork of John Goerzen's MissingPy library, hlinted and updated to run with GHC 7.6.3

 A Haskell Interface into the standard Python Interpreter

 Original Documentation:
 
 MissingPy is two things:
 
 .
 A Haskell binding for many C and Python libraries for tasks such as
 data compression, databases, etc.  This can be found in the
 MissingPy module tree.
 .
 Also, it's a low-level Haskell binding to the Python interpreter to
 enable development of hybrid applications that use both
 environments.  This can be found in the Python module tree.  The
 Haskell bindings above use this environment.
 .
 MissingPy permits you to call Python code from Haskell.  It does NOT
 permit you to call Haskell code from Python.
 .
 MissingPy is the companion to my MissingH library, and integrates with
 it.

build-type: Custom
cabal-version: >= 1.10

library
    default-language:
        Haskell2010

    exposed-modules: Python.Types,
        Python.Utils,
        Python.Objects,
        Python.Interpreter,
        Python.Exceptions,
        Python.Exceptions.ExcTypes,
        Python.Objects.File,
        Python.Objects.Dict,
        MissingPy.FileArchive.GZip,
        MissingPy.FileArchive.BZip2,
        MissingPy.AnyDBM

    other-modules:
        Python.ForeignImports

    build-depends:
        base == 4.*,
        MissingH >= 1.0.1,
        anydbm >= 1.0.5

    hs-source-dirs:
        src

    c-sources: glue/glue.c glue/excglue.c

    default-extensions:
        ForeignFunctionInterface,
        TypeSynonymInstances,
        FlexibleInstances

test-suite  originalunittests
    type:       exitcode-stdio-1.0
    main-is:    Main.hs

    default-language:
            Haskell2010

    build-depends:
        base == 4.*,
        Cabal,
        anydbm >= 1.0.5,
        directory,
        hashtables,
        MissingH >= 1.0.1,
        HUnit,
        MissingPy

    ghc-options:
        -Wall
        -threaded

    hs-source-dirs:
        originaltests

    default-extensions:
        OverlappingInstances
